<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnClear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnClearClick"
                android:text="@string/Clear"
                android:textColor="#000000"
                android:textSize="25sp"
                app:backgroundTint="#a1a1a1" />

            <Button
                android:id="@+id/btnSignChange"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnSignChangeClick"
                android:text="@string/SignChange"
                android:textColor="#000000"
                android:textSize="25sp"
                app:backgroundTint="#a1a1a1" />

            <Button
                android:id="@+id/btnSquareRoot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnSquareRootClick"
                android:text="@string/SquareRoot"
                android:textColor="#000000"
                android:textSize="25sp"
                app:backgroundTint="#a1a1a1" />

            <Button
                android:id="@+id/btnDivision"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnDivisionClick"
                android:text="@string/Division"
                android:textSize="25sp"
                app:backgroundTint="#f69a01" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSeven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnSevenClick"
                android:text="@string/seven"
                android:textSize="25sp"
                app:backgroundTint="#2d2d2d"/>

            <Button
                android:id="@+id/btnEight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnEightClick"
                android:text="@string/eight"
                android:textSize="25sp"
                app:backgroundTint="#2d2d2d"/>

            <Button
                android:id="@+id/btnNine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnNineClick"
                android:text="@string/nine"
                android:textSize="25sp"
                app:backgroundTint="#2d2d2d"/>

            <Button
                android:id="@+id/btnMultiplication"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnMultiplicationClick"
                android:text="@string/Multiplication"
                android:textSize="25sp"
                app:backgroundTint="#f69a01" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnFour"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnFourClick"
                android:text="@string/four"
                android:textSize="25sp"
                app:backgroundTint="#2d2d2d"/>

            <Button
                android:id="@+id/btnFive"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnFiveClick"
                android:text="@string/five"
                android:textSize="25sp"
                app:backgroundTint="#2d2d2d"/>

            <Button
                android:id="@+id/btnSix"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnSixClick"
                android:text="@string/six"
                android:textSize="25sp"
                app:backgroundTint="#2d2d2d"/>

            <Button
                android:id="@+id/btnMinus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnMinusClick"
                android:text="@string/Minus"
                android:textSize="25sp"
                app:backgroundTint="#f69a01" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnOne"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnOneClick"
                android:text="@string/one"
                android:textSize="25sp"
                app:backgroundTint="#2d2d2d"/>

            <Button
                android:id="@+id/btnTwo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnTwoClick"
                android:text="@string/two"
                android:textSize="25sp"
                app:backgroundTint="#2d2d2d"/>

            <Button
                android:id="@+id/btnThree"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnThreeClick"
                android:text="@string/three"
                android:textSize="25sp"
                app:backgroundTint="#2d2d2d"/>

            <Button
                android:id="@+id/btnPlus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnPlusClick"
                android:text="@string/Plus"
                android:textSize="25sp"
                app:backgroundTint="#f69a01" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnZero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="107dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnZeroClick"
                android:text="@string/zero"
                android:textSize="25sp"
                app:backgroundTint="#2d2d2d"/>

            <Button
                android:id="@+id/btnDot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnDotClick"
                android:text="@string/Dot"
                android:textSize="25sp"
                app:backgroundTint="#2d2d2d"/>

            <Button
                android:id="@+id/btnEqual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onBtnEqualClick"
                android:text="@string/Equal"
                android:textSize="25sp"
                app:backgroundTint="#f69a01" />

        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/results"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints="false"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/circle"
        android:onClick="onBtnBackClick"
        android:text="@string/Back"
        android:textColor="#000000"
        android:textSize="25sp"
        app:backgroundTint="#a1a1a1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>